<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/pullToRefresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--<include layout="@layout/app_bar" />-->


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/name"
            android:textColor="@color/VeryDarkMaroon" />

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/user_name"
            android:textColor="@color/VeryDarkMaroon" />

        <TextView
            android:id="@+id/ageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/age"
            android:textColor="@color/VeryDarkMaroon" />

        <TextView
            android:id="@+id/nationalityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/nationality"
            android:textColor="@color/VeryDarkMaroon" />

        <TextView
            android:id="@+id/contactInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/contact_info"
            android:textColor="@color/VeryDarkMaroon" />

        <Button
            android:id="@+id/editDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/editDetails"
            android:textColor="@color/iconWhite" />

        <Button
            android:id="@+id/signOutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/signOut"
            android:textColor="@color/iconWhite" />



    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>